test/compile_errors/stage1/obj/invalid_empty_unicode_escape.zig
export fn entry() void {
    const a = '\u{}';
}

// invalid empty unicode escape
//
// tmp.zig:2:19: error: empty unicode escape sequence
